--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,12 @@ width: 120px;/*margin-top: -61px;*/
     color: rgba(23,49,84, 0.6);
   }
 
-
+input{
+  outline:none;
+}
+textarea{
+  outline: none;
+}
     /* ==========================================================================
    #GRID
    ========================================================================== */
