--- a/css/details.css
+++ b/css/details.css
@@ -7,14 +7,16 @@ body{
 }
 
 header{
-  z-index: 1;
   position: fixed;
+  display: flex;
+  align-items: center;
+  z-index: 1;
   background: #FFFFFF;
   box-shadow: 0px 4px 21px rgba(0, 0, 0, 0.25);
   padding: 20px;
   width: calc(100% - 0%);
   top: 0;
-  height: 30px;
+  height: max-content;
 }
 
 .left_area h3{
@@ -119,8 +121,8 @@ header{
       align-items: center;
       border-radius: 0px;
       /* border: 1px solid rgba(133,102,255, 0.5); */
-      background: #ffffff;
-      box-shadow: 0 1rem 2rem rgba(136, 135, 161, 0.4);
+      background: #F4F2FF;
+      /* box-shadow: 0 1rem 2rem rgba(136, 135, 161, 0.4); */
       margin-top:8rem;
       /* box-shadow: 3px 3px 5px 6px #ccc; */
        }
@@ -207,12 +209,31 @@ header{
 
 /* website-cc */
 .stats .column {
-  float: left;
+  text-align: center;
   width: 15%;
   padding: 10px;
   height: 300px; /* Should be removed. Only for demonstration */
-  /* background-color: #9d9cb4ef; */
-  
+  /* background-color: #9d9cb4ef; */ 
+}
+.stats .column:last-of-type{
+  height: 12rem;
+  padding: 3rem;
+  width: 55%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #F4F2FF;
+  border-radius: 12px;
+  margin-left: 3rem;
+}
+.column_div > p{
+  font-size: 1.3rem;
+  color: #060199;
+}
+.stats .row{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Clear floats after the columns */
@@ -223,8 +244,8 @@ header{
 }
 
 .stats{
-  margin-left: 30rem;
-  margin-top: 5rem;
+  margin: auto;
+  margin-top: 3rem;
 }
 
 /* pie-chart */
@@ -236,7 +257,7 @@ header{
   position: relative;
 }
 .progress-pie-chart.gt-50 {
-  background-color: #8566FF;
+  background-color: #060199;
 }
 
 .ppc-progress {
@@ -285,7 +306,7 @@ header{
   display: block;
   font-size: 2.6em;
   font-weight: bold;
-  color: #81CE97;
+  color: #3dbcf9;
 }
 
 .pcc-percents-wrapper {
@@ -301,23 +322,21 @@ header{
 /* graphs */
 
 .graphs .column {
-  float: left;
-  width: 30%;
+  width: 40%;
   padding: 10px;
   height: 350px; /* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
-.graphs .row:after {
-  content: "";
-  display: table;
-  clear: both;
+.graphs .row {
+  display: flex;
+  justify-content: center;
 }
 
 .graphs{
-  margin-left: 30rem;
+  margin: auto;
   margin-top: 5rem;
-  margin-bottom:5rem;
+  margin-bottom: 5rem;
 }
 
 /* vertical chart */
@@ -831,8 +850,7 @@ header{
 
 .bar-graph-horizontal .bar {
   border-radius: 3px;
-  height: 55px;
-  float: left;
+  height: 40px;
   overflow: hidden;
   position: relative;
   width: 0;
@@ -847,7 +865,8 @@ header{
   font-weight: 700;
   position: absolute;
   right: 16px;
-  top: 17px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .bar-graph-one .bar-one .bar {
