--- a/css/style.css
+++ b/css/style.css
@@ -1335,7 +1335,7 @@ text-align: left;
   padding: 10px 20px;
   border:none;
   color: white;
-  background: #8566FF;
+  background: #060199;
   box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.25);
   border-radius: 50px;
   display:flex;
@@ -1390,7 +1390,7 @@ text-align: left;
 }
 
 hr.new4 {
-  border: 1px solid #9B5DE5;;
+  border: 1px solid #060199;;
 }
 /* Please Subscribe My Youtube Channel
 https://www.youtube.com/channel/UC_osRDuNAp1ZZxKckdKlNsw?sub_confirmation=1
