--- a/css/details.css
+++ b/css/details.css
@@ -343,8 +343,8 @@ header{
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,100,500);
 .igFrameBar {
-  width: 400px;
-  height: 200px;
+  width: 600px;
+  height: 250px;
   position: relative;
   background: #f2f2f2;
   margin: 15% auto 0px auto;
@@ -382,7 +382,7 @@ header{
 }
 
 .igData1 {
-  background: linear-gradient(180deg, #8566FF 0%, rgba(158, 140, 231, 0.601042) 50.31%, rgba(133, 102, 255, 0.24) 100%);
+  background: linear-gradient(180deg, hsla(215, 100%, 13%, 1) 0%, hsla(0, 0%, 100%, 1) 100%);
   height: 0px;
   left: 26.3636363636px;
   -webkit-animation: showBar1 1.2s 0.1s forwards;
@@ -392,7 +392,7 @@ header{
 }
 
 .igData2 {
-  background: linear-gradient(180deg, #8566FF 0%, rgba(158, 140, 231, 0.601042) 50.31%, rgba(133, 102, 255, 0.24) 100%);
+  background: linear-gradient(180deg, hsla(215, 100%, 13%, 1) 0%, hsla(0, 0%, 100%, 1) 100%);
   height: 0px;
   left: 62.7272727273px;
   -webkit-animation: showBar2 1.2s 0.2s forwards;
@@ -402,7 +402,7 @@ header{
 }
 
 .igData3 {
-  background: linear-gradient(180deg, #8566FF 0%, rgba(158, 140, 231, 0.601042) 50.31%, rgba(133, 102, 255, 0.24) 100%);
+  background: linear-gradient(180deg, hsla(215, 100%, 13%, 1) 0%, hsla(0, 0%, 100%, 1) 100%);
   height: 0px;
   left: 99.0909090909px;
   -webkit-animation: showBar3 1.2s 0.3s forwards;
@@ -412,7 +412,7 @@ header{
 }
 
 .igData4 {
-  background: linear-gradient(180deg, #8566FF 0%, rgba(158, 140, 231, 0.601042) 50.31%, rgba(133, 102, 255, 0.24) 100%);
+  background: linear-gradient(180deg, hsla(215, 100%, 13%, 1) 0%, hsla(0, 0%, 100%, 1) 100%);
   height: 0px;
   left: 135.4545454545px;
   -webkit-animation: showBar4 1.2s 0.4s forwards;
@@ -422,7 +422,7 @@ header{
 }
 
 .igData5 {
-  background: linear-gradient(180deg, #8566FF 0%, rgba(158, 140, 231, 0.601042) 50.31%, rgba(133, 102, 255, 0.24) 100%);
+  background: linear-gradient(180deg, hsla(215, 100%, 13%, 1) 0%, hsla(0, 0%, 100%, 1) 100%);
   height: 0px;
   left: 171.8181818182px;
   -webkit-animation: showBar5 1.2s 0.5s forwards;
@@ -432,7 +432,7 @@ header{
 }
 
 .igData6 {
-  background: linear-gradient(180deg, #8566FF 0%, rgba(158, 140, 231, 0.601042) 50.31%, rgba(133, 102, 255, 0.24) 100%);
+  background: linear-gradient(180deg, hsla(215, 100%, 13%, 1) 0%, hsla(0, 0%, 100%, 1) 100%);
   height: 0px;
   left: 208.1818181818px;
   -webkit-animation: showBar6 1.2s 0.6s forwards;
@@ -442,7 +442,7 @@ header{
 }
 
 .igData7 {
-  background: linear-gradient(180deg, #8566FF 0%, rgba(158, 140, 231, 0.601042) 50.31%, rgba(133, 102, 255, 0.24) 100%);
+  background: linear-gradient(180deg, hsla(215, 100%, 13%, 1) 0%, hsla(0, 0%, 100%, 1) 100%);
   height: 0px;
   left: 244.5454545455px;
   -webkit-animation: showBar7 1.2s 0.7s forwards;
@@ -452,7 +452,7 @@ header{
 }
 
 .igData8 {
-  background: linear-gradient(180deg, #8566FF 0%, rgba(158, 140, 231, 0.601042) 50.31%, rgba(133, 102, 255, 0.24) 100%);
+  background: linear-gradient(180deg, hsla(215, 100%, 13%, 1) 0%, hsla(0, 0%, 100%, 1) 100%);
   height: 0px;
   left: 280.9090909091px;
   -webkit-animation: showBar8 1.2s 0.8s forwards;
@@ -462,7 +462,7 @@ header{
 }
 
 .igData9 {
-  background: linear-gradient(180deg, #8566FF 0%, rgba(158, 140, 231, 0.601042) 50.31%, rgba(133, 102, 255, 0.24) 100%);
+  background: linear-gradient(180deg, hsla(215, 100%, 13%, 1) 0%, hsla(0, 0%, 100%, 1) 100%);
   height: 0px;
   left: 317.2727272727px;
   -webkit-animation: showBar9 1.2s 0.9s forwards;
@@ -472,7 +472,7 @@ header{
 }
 
 .igData10 {
-  background: linear-gradient(180deg, #8566FF 0%, rgba(158, 140, 231, 0.601042) 50.31%, rgba(133, 102, 255, 0.24) 100%);
+  background: linear-gradient(180deg, hsla(215, 100%, 13%, 1) 0%, hsla(0, 0%, 100%, 1) 100%);
   height: 0px;
   left: 353.6363636364px;
   -webkit-animation: showBar10 1.2s 1s forwards;
