--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ margin: 0 auto;
 width: 120px;/*margin-top: -61px;*/
 }
 .containerp {
-  background: #D5D9E0;
+  background: #f3f2f2;
   width: 100%;
 }
 
@@ -1160,7 +1160,7 @@ textarea{
 
 
 .boxg {
-  background: linear-gradient(to bottom right, rgba(0, 28, 67, 0.3) , white, rgba(0, 28, 67, 0.3));
+  background: linear-gradient(to bottom right, rgba(0, 28, 67, 0.2) , white, rgba(0, 28, 67, 0.2));
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
   border-radius: 68px;
@@ -1266,6 +1266,7 @@ text-align: left;
 /* Style the form - display items horizontally */
 .cform{
   background: #EAECF8;
+  margin-top: 5rem;
   padding-top: 30px;
   padding-bottom: 50px;
 }
@@ -1319,7 +1320,8 @@ text-align: left;
 /* Style the input fields */
 .form-inline input {
   vertical-align: middle;
-  padding: 15px 50px;
+  padding: 15px 0 15px 15px;
+    width: 35rem;
   border: 1px solid #ddd;
   background: #FFFFFF;
   box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.25);
@@ -1332,7 +1334,8 @@ text-align: left;
 }
 /* Style the submit button */
 .cform button {
-  padding: 10px 20px;
+  font-size: 2rem;
+  padding: 10px 60px;
   border:none;
   color: white;
   background: #060199;
@@ -1385,7 +1388,8 @@ text-align: left;
   font-weight: normal;
   font-size: 20px;
   line-height: 25px;
-  color: #344FA1;
+  color: #3d3d3d;
+  text-align: justify;
   margin-bottom: 35px;
 }
 
